<resources>
    <!--  Nome do aplicativo  -->
    <string name="app_name">MyBooks</string>
    <!--  Títulos das telas  -->
    <string name="title_home">Home</string>
    <string name="title_favorites">Favoritos</string>
    <string name="title_book_details">Detalhes</string>
    <string name="desc_favorite_image">Favoritar livro</string>
    <string name="label_author">Autor</string>
    <string name="label_genre">Gênero</string>
    <string name="label_title">Titulo do Livro</string>
    <!--  Mensagens dos diálogos  -->
    <string name="dialog_message_delete_item">Tem certeza de que deseja excluir este item?</string>
    <string name="dialog_positive_button_yes">Sim</string>
    <string name="dialog_negative_button_no">Não</string>
    <!--  Mensagens de sucesso e erro  -->
    <string name="msg_removed_successfully">Item removido com sucesso!</string>
    <string name="msg_no_books">Nenhum livro encontrado nos seus favoritos!</string>
    <!--  Botões e descrições  -->
    <string name="button_remove_book">REMOVER LIVRO</string>
    <string name="desc_book_image">Imagem de livros</string>
    <string name="desc_back_button">Voltar para a tela anterior</string>
    <string name="label_isBook_favorite">Livro favorito?</string>
</resources>